Fixed issue with nav covering content on ios devices

--- a/styles/style.css
+++ b/styles/style.css
@@ -40,7 +40,8 @@ hr {
 }
 
 section {
-    scroll-margin-top: 150px;
+    padding-top: 150px;
+    margin-top: -150px;
 }
 
 .button-icon {
